# FHIR-Nudge

./: .gitignore  LICENSE  README.md  app.py  openapi.yaml  pyproject.toml  pytest.ini
docs/: AIX_ERROR_SCHEMA.md  CLIENT.md  ERROR_HANDLING_GUIDELINES.md
e2e/: README.md  e2e_runner.py  run_e2e.sh  run_proxy.sh  run_schemathesis.sh  test_e2e.py
fhir_nudge/: app.py  client.py  error_renderer.py  schemas.py
tests/: conftest.py  test_app.py  test_app_empty_search.py  test_app_postprocessing.py  test_client.py  test_error_renderer.py  test_openapi_spec.py
