[tool.poetry]
name = "fhir-nudge"
version = "0.1.0"
description = ""
authors = ["Michael Holcomb <michael.holcomb@utsouthwestern.edu>"]
readme = "README.md"
packages = [{include = "fhir_nudge"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.1.0"
requests = "^2.32.3"
python-dotenv = "^1.1.0"
pydantic = "^2.11.3"
openapi-spec-validator = "^0.7"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-mock = "^3.14.0"
coverage = "^7.8.0"
openapi-spec-validator = "^0.7.1"
schemathesis = "^3.39.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
